--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -8,9 +8,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows]
         python-version: ["3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v3
